Added logger, moved the manager initialization to constructor, added an extra check for params and slightly refactored code